--- a/chesa-stock-exchange/frontend/netlify.toml
+++ b/chesa-stock-exchange/frontend/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "chesa-stock-exchange/frontend"
-  command = "npm install && npm run build"
+  command = "CI=false npm install && CI=false npm run build"
   publish = "build"
 
 [[redirects]]
