fix: Update CORS configuration and Netlify environment variables

--- a/chesa-stock-exchange/frontend/netlify.toml
+++ b/chesa-stock-exchange/frontend/netlify.toml
@@ -11,3 +11,4 @@
 [build.environment]
   NODE_VERSION = "18"
   NPM_VERSION = "9"
+  REACT_APP_API_URL = "https://chesa-stock-exchange-api.onrender.com"
